[package]
name = "kylyp"
version = "0.7.0"
authors = ["kriry <krircc@gmail.com>"]

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket.git" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git", default-features = false, features = ["tera_templates"] }
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_json = "^1.0.0"
diesel = { version = "^0.16.0", features = ["postgres","chrono"] }
diesel_codegen = { version = "^0.16.0", features = ["postgres"] }
postgres = {version= "^0.15.1", features = ["with-chrono"]}
dotenv = "^0.10.0"
dotenv_macros = "^0.10.0"
easy={git="https://github.com/uncode/easy.git"}
regex = "^0.1.0"
chrono = { version = "0.4", features = ["serde"] }
config = "^0.7.0"
